[gd_scene load_steps=23 format=2]

[ext_resource path="res://Texturas/plataforma1.png" type="Texture" id=1]
[ext_resource path="res://Texturas/Plataforma que cae.png" type="Texture" id=2]
[ext_resource path="res://Resources/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Personaje.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/CajaFinal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Texturas/CosoDeSalto1.png" type="Texture" id=6]
[ext_resource path="res://Texturas/CosoDeSalto2.png" type="Texture" id=7]
[ext_resource path="res://Niveles/NivelPresentacion.gd" type="Script" id=8]
[ext_resource path="res://Texturas/Limit horizontal.png" type="Texture" id=9]
[ext_resource path="res://Texturas/Gancho.png" type="Texture" id=10]
[ext_resource path="res://Texturas/Caja.png" type="Texture" id=11]
[ext_resource path="res://Texturas/Cadena.png" type="Texture" id=12]
[ext_resource path="res://Niveles/Caja.gd" type="Script" id=13]
[ext_resource path="res://Texturas/fondonegro.jpg" type="Texture" id=14]
[ext_resource path="res://Resources/EnemigoRojo.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41.7128, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 2.98611 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.1245, 8.79103 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.5222, 8.67947 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "salto",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.7352, 12.0719 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 645.455, 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="EnemigoRojo" parent="." instance=ExtResource( 15 )]
position = Vector2( 358.735, 477.503 )

[node name="PersonajeJugable" parent="." instance=ExtResource( 4 )]
position = Vector2( 149.554, 383.051 )
z_index = 2

[node name="fondonegro" type="Sprite" parent="."]
position = Vector2( -12.498, 357.464 )
z_index = -2
texture = ExtResource( 14 )

[node name="Plataformas" type="Node2D" parent="."]

[node name="plataforma1" type="StaticBody2D" parent="Plataformas"]
position = Vector2( 205.153, 405.257 )
scale = Vector2( 2, 2 )

[node name="plataforma1" type="Sprite" parent="Plataformas/plataforma1"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataformas/plataforma1"]
position = Vector2( -1.98425, 9.92125 )
shape = SubResource( 4 )

[node name="plataforma3" type="StaticBody2D" parent="Plataformas"]
position = Vector2( 528.043, 323.192 )
scale = Vector2( 2, 2 )

[node name="Plataforma que cae" type="Sprite" parent="Plataformas/plataforma3"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataformas/plataforma3"]
shape = SubResource( 1 )

[node name="plataforma4" type="StaticBody2D" parent="Plataformas"]
position = Vector2( 673.375, 410.519 )
scale = Vector2( 2, 2 )

[node name="plataforma4" type="Sprite" parent="Plataformas/plataforma4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataformas/plataforma4"]
position = Vector2( -1.5874, 9.12755 )
shape = SubResource( 2 )

[node name="plataforma2" type="StaticBody2D" parent="Plataformas"]
position = Vector2( 408.34, 492.564 )
scale = Vector2( 2, 2 )

[node name="plataforma2" type="Sprite" parent="Plataformas/plataforma2"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataformas/plataforma2"]
position = Vector2( 0, 8.33385 )
shape = SubResource( 3 )

[node name="Coin" parent="." instance=ExtResource( 3 )]
position = Vector2( 631.744, 393.71 )
z_index = 1

[node name="CajaFinal" parent="." instance=ExtResource( 5 )]
position = Vector2( 638.09, 355.657 )

[node name="Caja" type="Area2D" parent="."]
z_index = 1
script = ExtResource( 13 )

[node name="CajaTimer" type="Timer" parent="Caja"]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="Caja"]
position = Vector2( 475.197, 476.226 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
animation = "normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Caja"]
position = Vector2( 475.068, 481.369 )
shape = SubResource( 6 )

[node name="Limit horizontal" type="Sprite" parent="."]
position = Vector2( 244.063, 284.886 )
texture = ExtResource( 9 )

[node name="Cadena" type="Sprite" parent="Limit horizontal"]
position = Vector2( 1.62357, 13.8757 )
texture = ExtResource( 12 )

[node name="Gancho" type="Sprite" parent="Limit horizontal"]
position = Vector2( 1.16498, 39.344 )
texture = ExtResource( 10 )

[node name="Cadena2" type="Sprite" parent="Limit horizontal"]
position = Vector2( 1.59308, 28.297 )
texture = ExtResource( 12 )

[node name="RigidBody2D" type="RigidBody2D" parent="Limit horizontal"]
position = Vector2( 1.26135, 49.1924 )

[node name="Caja" type="Sprite" parent="Limit horizontal/RigidBody2D"]
position = Vector2( 0.0799866, 1.05472 )
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Limit horizontal/RigidBody2D"]
polygon = PoolVector2Array( -7.21054, -5.2149, -7.21054, 9.08032, 8.34607, 9.08032, 7.9256, -6.05579 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 554.139, 614.72 )
shape = SubResource( 7 )
[connection signal="juego_activo" from="." to="EnemigoRojo" method="_on_Level_juego_activo"]
[connection signal="juego_activo" from="." to="Coin" method="_on_Level_juego_activo"]
[connection signal="juego_activo" from="." to="CajaFinal" method="_on_Level_juego_activo"]
[connection signal="juego_frenado" from="." to="EnemigoRojo" method="_on_Level_juego_frenado"]
[connection signal="juego_frenado" from="." to="Coin" method="_on_Level_juego_frenado"]
[connection signal="juego_frenado" from="." to="CajaFinal" method="_on_Level_juego_frenado"]
[connection signal="personaje_entro" from="CajaFinal" to="." method="_on_CajaFinal_personaje_entro"]
[connection signal="body_entered" from="Caja" to="PersonajeJugable" method="_on_Caja_body_entered"]
[connection signal="timeout" from="Caja/CajaTimer" to="PersonajeJugable" method="_on_CajaTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
